# evtol-sim

./: .gitignore  CMakeLists.txt  README.md  aircraft.hpp
.github/workflows/: ci.yml
src/: charging_network.hpp  main.cpp  sim.cpp  sim.hpp  utility.hpp
tests/: CMakeLists.txt  ut_aircraft.cpp  ut_sim.cpp
